--- a/tutorial/HybridNets_tutorial.ipynb
+++ b/tutorial/HybridNets_tutorial.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HybridNets - tutorial.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,14 +18,24 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rachana219/HybridNets/blob/main/tutorial/HybridNets_tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "SO7I9ozfFpmW",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "837dcb59-18ff-48d5-8364-babc3bc41f73"
+        "outputId": "17c00250-3fb7-4ee7-d37c-5fdcf4e3d06e"
       },
       "outputs": [
         {
@@ -37,11 +47,14 @@
             "Reading state information... Done\n",
             "libsm6 is already the newest version (2:1.2.2-1).\n",
             "libxext6 is already the newest version (2:1.3.3-1).\n",
-            "git is already the newest version (1:2.17.1-1ubuntu0.9).\n",
-            "unzip is already the newest version (6.0-21ubuntu1.1).\n",
+            "git is already the newest version (1:2.17.1-1ubuntu0.13).\n",
+            "unzip is already the newest version (6.0-21ubuntu1.2).\n",
             "wget is already the newest version (1.19.4-1ubuntu2.2).\n",
-            "ffmpeg is already the newest version (7:3.4.8-0ubuntu0.2).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 39 not upgraded.\n"
+            "ffmpeg is already the newest version (7:3.4.11-0ubuntu0.1).\n",
+            "The following package was automatically installed and is no longer required:\n",
+            "  libnvidia-common-460\n",
+            "Use 'apt autoremove' to remove it.\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 7 not upgraded.\n"
           ]
         }
       ],
@@ -51,85 +64,68 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "raaxWl2_RdIC",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e177dc6d-b856-41da-b848-441a835430f6"
+        "outputId": "7aa3ee95-1c2c-4d73-c74e-a53c7843c115"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: gdown in /usr/local/lib/python3.7/dist-packages (4.2.2)\n",
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: gdown in /usr/local/lib/python3.8/dist-packages (4.4.0)\n",
             "Collecting gdown\n",
-            "  Downloading gdown-4.4.0.tar.gz (14 kB)\n",
-            "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
-            "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
-            "    Preparing wheel metadata ... \u001b[?25l\u001b[?25hdone\n",
-            "Requirement already satisfied: albumentations in /usr/local/lib/python3.7/dist-packages (0.1.12)\n",
+            "  Downloading gdown-4.5.4-py3-none-any.whl (14 kB)\n",
+            "Requirement already satisfied: albumentations in /usr/local/lib/python3.8/dist-packages (1.2.1)\n",
             "Collecting albumentations\n",
-            "  Downloading albumentations-1.1.0-py3-none-any.whl (102 kB)\n",
-            "\u001b[K     |████████████████████████████████| 102 kB 12.0 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: opencv-python in /usr/local/lib/python3.7/dist-packages (4.1.2.30)\n",
-            "Collecting opencv-python\n",
-            "  Downloading opencv_python-4.5.5.64-cp36-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (60.5 MB)\n",
-            "\u001b[K     |████████████████████████████████| 60.5 MB 1.2 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: six in /usr/local/lib/python3.7/dist-packages (from gdown) (1.15.0)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.7/dist-packages (from gdown) (3.6.0)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from gdown) (4.63.0)\n",
-            "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.7/dist-packages (from gdown) (4.6.3)\n",
-            "Requirement already satisfied: requests[socks] in /usr/local/lib/python3.7/dist-packages (from gdown) (2.23.0)\n",
-            "Collecting opencv-python-headless>=4.1.1\n",
-            "  Downloading opencv_python_headless-4.5.5.64-cp36-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (47.8 MB)\n",
-            "\u001b[K     |████████████████████████████████| 47.8 MB 1.3 MB/s \n",
-            "\u001b[?25hRequirement already satisfied: PyYAML in /usr/local/lib/python3.7/dist-packages (from albumentations) (3.13)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from albumentations) (1.4.1)\n",
-            "Collecting qudida>=0.0.4\n",
-            "  Downloading qudida-0.0.4-py3-none-any.whl (3.5 kB)\n",
-            "Requirement already satisfied: scikit-image>=0.16.1 in /usr/local/lib/python3.7/dist-packages (from albumentations) (0.18.3)\n",
-            "Requirement already satisfied: numpy>=1.11.1 in /usr/local/lib/python3.7/dist-packages (from albumentations) (1.21.5)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from qudida>=0.0.4->albumentations) (3.10.0.2)\n",
-            "Requirement already satisfied: scikit-learn>=0.19.1 in /usr/local/lib/python3.7/dist-packages (from qudida>=0.0.4->albumentations) (1.0.2)\n",
-            "Requirement already satisfied: matplotlib!=3.0.0,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from scikit-image>=0.16.1->albumentations) (3.2.2)\n",
-            "Requirement already satisfied: tifffile>=2019.7.26 in /usr/local/lib/python3.7/dist-packages (from scikit-image>=0.16.1->albumentations) (2021.11.2)\n",
-            "Requirement already satisfied: networkx>=2.0 in /usr/local/lib/python3.7/dist-packages (from scikit-image>=0.16.1->albumentations) (2.6.3)\n",
-            "Requirement already satisfied: pillow!=7.1.0,!=7.1.1,>=4.3.0 in /usr/local/lib/python3.7/dist-packages (from scikit-image>=0.16.1->albumentations) (7.1.2)\n",
-            "Requirement already satisfied: PyWavelets>=1.1.1 in /usr/local/lib/python3.7/dist-packages (from scikit-image>=0.16.1->albumentations) (1.2.0)\n",
-            "Requirement already satisfied: imageio>=2.3.0 in /usr/local/lib/python3.7/dist-packages (from scikit-image>=0.16.1->albumentations) (2.4.1)\n",
-            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.7/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image>=0.16.1->albumentations) (0.11.0)\n",
-            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image>=0.16.1->albumentations) (2.8.2)\n",
-            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image>=0.16.1->albumentations) (3.0.7)\n",
-            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.7/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image>=0.16.1->albumentations) (1.3.2)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.19.1->qudida>=0.0.4->albumentations) (1.1.0)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.19.1->qudida>=0.0.4->albumentations) (3.1.0)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests[socks]->gdown) (1.24.3)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests[socks]->gdown) (3.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests[socks]->gdown) (2021.10.8)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests[socks]->gdown) (2.10)\n",
-            "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6 in /usr/local/lib/python3.7/dist-packages (from requests[socks]->gdown) (1.7.1)\n",
-            "Building wheels for collected packages: gdown\n",
-            "  Building wheel for gdown (PEP 517) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for gdown: filename=gdown-4.4.0-py3-none-any.whl size=14774 sha256=15edc08b7eea27445079707d4a90259cf8e051f6c756eeda39414200b7c68447\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-gco8h3g4/wheels/fb/c3/0e/c4d8ff8bfcb0461afff199471449f642179b74968c15b7a69c\n",
-            "Successfully built gdown\n",
-            "Installing collected packages: opencv-python-headless, qudida, opencv-python, gdown, albumentations\n",
-            "  Attempting uninstall: opencv-python\n",
-            "    Found existing installation: opencv-python 4.1.2.30\n",
-            "    Uninstalling opencv-python-4.1.2.30:\n",
-            "      Successfully uninstalled opencv-python-4.1.2.30\n",
+            "  Downloading albumentations-1.3.0-py3-none-any.whl (123 kB)\n",
+            "\u001b[K     |████████████████████████████████| 123 kB 38.0 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: opencv-python in /usr/local/lib/python3.8/dist-packages (4.6.0.66)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.8/dist-packages (from gdown) (1.15.0)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.8/dist-packages (from gdown) (3.8.0)\n",
+            "Requirement already satisfied: requests[socks] in /usr/local/lib/python3.8/dist-packages (from gdown) (2.23.0)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.8/dist-packages (from gdown) (4.64.1)\n",
+            "Requirement already satisfied: beautifulsoup4 in /usr/local/lib/python3.8/dist-packages (from gdown) (4.6.3)\n",
+            "Requirement already satisfied: numpy>=1.11.1 in /usr/local/lib/python3.8/dist-packages (from albumentations) (1.21.6)\n",
+            "Requirement already satisfied: qudida>=0.0.4 in /usr/local/lib/python3.8/dist-packages (from albumentations) (0.0.4)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.8/dist-packages (from albumentations) (1.7.3)\n",
+            "Requirement already satisfied: PyYAML in /usr/local/lib/python3.8/dist-packages (from albumentations) (6.0)\n",
+            "Requirement already satisfied: opencv-python-headless>=4.1.1 in /usr/local/lib/python3.8/dist-packages (from albumentations) (4.6.0.66)\n",
+            "Requirement already satisfied: scikit-image>=0.16.1 in /usr/local/lib/python3.8/dist-packages (from albumentations) (0.18.3)\n",
+            "Requirement already satisfied: scikit-learn>=0.19.1 in /usr/local/lib/python3.8/dist-packages (from qudida>=0.0.4->albumentations) (1.0.2)\n",
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.8/dist-packages (from qudida>=0.0.4->albumentations) (4.1.1)\n",
+            "Requirement already satisfied: tifffile>=2019.7.26 in /usr/local/lib/python3.8/dist-packages (from scikit-image>=0.16.1->albumentations) (2021.11.2)\n",
+            "Requirement already satisfied: PyWavelets>=1.1.1 in /usr/local/lib/python3.8/dist-packages (from scikit-image>=0.16.1->albumentations) (1.3.0)\n",
+            "Requirement already satisfied: imageio>=2.3.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image>=0.16.1->albumentations) (2.9.0)\n",
+            "Requirement already satisfied: pillow!=7.1.0,!=7.1.1,>=4.3.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image>=0.16.1->albumentations) (7.1.2)\n",
+            "Requirement already satisfied: matplotlib!=3.0.0,>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image>=0.16.1->albumentations) (3.2.2)\n",
+            "Requirement already satisfied: networkx>=2.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image>=0.16.1->albumentations) (2.6.3)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image>=0.16.1->albumentations) (1.4.4)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image>=0.16.1->albumentations) (3.0.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image>=0.16.1->albumentations) (2.8.2)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image>=0.16.1->albumentations) (0.11.0)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from scikit-learn>=0.19.1->qudida>=0.0.4->albumentations) (3.1.0)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.8/dist-packages (from scikit-learn>=0.19.1->qudida>=0.0.4->albumentations) (1.2.0)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (3.0.4)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (1.24.3)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (2.10)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (2022.9.24)\n",
+            "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6 in /usr/local/lib/python3.8/dist-packages (from requests[socks]->gdown) (1.7.1)\n",
+            "Installing collected packages: gdown, albumentations\n",
             "  Attempting uninstall: gdown\n",
-            "    Found existing installation: gdown 4.2.2\n",
-            "    Uninstalling gdown-4.2.2:\n",
-            "      Successfully uninstalled gdown-4.2.2\n",
+            "    Found existing installation: gdown 4.4.0\n",
+            "    Uninstalling gdown-4.4.0:\n",
+            "      Successfully uninstalled gdown-4.4.0\n",
             "  Attempting uninstall: albumentations\n",
-            "    Found existing installation: albumentations 0.1.12\n",
-            "    Uninstalling albumentations-0.1.12:\n",
-            "      Successfully uninstalled albumentations-0.1.12\n",
-            "Successfully installed albumentations-1.1.0 gdown-4.4.0 opencv-python-4.5.5.64 opencv-python-headless-4.5.5.64 qudida-0.0.4\n"
+            "    Found existing installation: albumentations 1.2.1\n",
+            "    Uninstalling albumentations-1.2.1:\n",
+            "      Successfully uninstalled albumentations-1.2.1\n",
+            "Successfully installed albumentations-1.3.0 gdown-4.5.4\n"
           ]
         }
       ],
@@ -139,13 +135,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "aIKLQm7qRvef",
-        "outputId": "92edf93c-3222-45f9-c18c-4b968864f998"
+        "outputId": "f4b7af87-feff-47d0-b125-401cab8ff15b"
       },
       "outputs": [
         {
@@ -153,12 +149,10 @@
           "name": "stdout",
           "text": [
             "Cloning into 'HybridNets'...\n",
-            "remote: Enumerating objects: 822, done.\u001b[K\n",
-            "remote: Counting objects: 100% (822/822), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (669/669), done.\u001b[K\n",
-            "remote: Total 822 (delta 445), reused 399 (delta 140), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (822/822), 184.83 MiB | 15.60 MiB/s, done.\n",
-            "Resolving deltas: 100% (445/445), done.\n"
+            "remote: Enumerating objects: 1191, done.\u001b[K\n",
+            "remote: Counting objects: 100% (1191/1191), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (460/460), done.\u001b[K\n",
+            "^C\n"
           ]
         }
       ],
